# namel3ss-programming-language

./: .editorconfig  .gitattributes  .gitignore  ADVANCED_EDUCATION_PLATFORM_COMPLETE.md  AGENT_GRAPH_E2E_EXAMPLES.md  AGENT_GRAPH_EDITOR_GUIDE.md  AGENT_GRAPH_GUIDE.md  AGENT_GRAPH_IMPLEMENTATION_COMPLETE.md  AGENT_GRAPH_QUICK_REFERENCE.md  AI_GRAMMAR_INTEGRATION_COMPLETE.md  AI_PARSER_REFACTORING_COMPLETE.md  API_REFERENCE.md  APP_WIRING_FIX_COMPLETE.md  AST_CONVERTER_IMPLEMENTATION.md  AST_CONVERTER_QUICK_REF.md  ASYNC_STREAMING_IMPLEMENTATION.md  BACKEND_ASYNC_UPGRADE_SUMMARY.md  BUILD_ANYTHING_GUIDE.md  CHAIN_PARSING_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CHROME_IMPLEMENTATION_FINAL.md  CICD_DEPLOYMENT.md  CICD_QUICK_REF.md  CLI_DOCUMENTATION.md  CLI_IMPLEMENTATION.md  CLI_QUICK_REFERENCE.md  CLI_REFACTORING_COMPLETE.md  COMMENT_SYSTEM_IMPLEMENTATION.md  COMPILER_STABILIZATION_STATUS.md  CONCURRENCY_GUIDE.md  CONFORMANCE_IMPLEMENTATION_COMPLETE.md  CONTRIBUTING.md  CONTROL_FLOW_IMPLEMENTATION.md  CORE_FUNCTIONALITY_ANALYSIS.md  DATA_BINDING_IMPLEMENTATION.md  DEBUGGING_IMPLEMENTATION_SUMMARY.md  DECLARATIVE_UI_SUMMARY.md  DESIGN_TOKENS_IMPLEMENTATION_STATUS.md  DOCUMENTATION_TESTING_UPGRADE_SUMMARY.md  Dockerfile.backend  (+149 more)
api/: main.py
archive/: README.md
benchmarks/: README.md  locustfile.py
build_test/: admin.html  feedback.html  index.html  scripts.js  styles.css
build_test_control_flow/: features.html  order-details.html  orders.html  scripts.js
debug_traces/: sample_trace.jsonl
demo-vscode-extension/: language-configuration.json  package-lock.json  package.json
demo_backend/: database.py  main.py
deployment/: Dockerfile.frontend  Dockerfile.yjs  docker-compose.yml
docs/: ACCESSIBILITY.md  ADVANCED_FEATURES.md  API_AND_NAVIGATION_PATTERNS.md  API_DOCUMENTATION.md  API_NAVIGATION_GUIDE.md  BACKEND_AND_DEPLOYMENT_GUIDE.md  CHROME_COMPONENTS_GUIDE.md  CHROME_FINAL_DELIVERABLES.md  CHROME_MIGRATION_GUIDE.md  CHROME_RELEASE_NOTES.md  CLEANUP_COMPLETE.md  COMPLETE_CHAT_WIDGET_EXAMPLE.md  DATA_DISPLAY_COMPONENTS.md  DATA_MODELS_GUIDE.md  DESIGN_TOKENS_FINAL_SUMMARY.md  DESIGN_TOKENS_IMPLEMENTATION.md  DESIGN_TOKENS_PHASE_10_COMPLETE.md  DESIGN_TOKENS_PROJECT_COMPLETE.md  DOCUMENTATION_INDEX.md  ENHANCED_EXPRESSIONS_GUIDE.md  EVAL_SUITES.md  EXAMPLES_OVERVIEW.md  EXAMPLES_STATUS.md  EXPRESSION_LANGUAGE.md  EXTENSIONS_GUIDE.md  FEEDBACK_COMPONENTS_GUIDE.md  FORMS_REFERENCE.md  FRONTEND_ESCAPE_HATCHES.md  FRONTEND_INTEGRATION_MODES.md  GRAMMAR.md  INDEX.md  INLINE_BLOCKS.md  LANGUAGE_REFERENCE.md  LAYOUT_PRIMITIVES.md  LAYOUT_PRIMITIVES_IMPLEMENTATION_COMPLETE.md  LOCAL_MODEL_DEPLOYMENT.md  LOGGING.md  LOGIC.md  MEMORY_SYSTEM.md  MIGRATION_GUIDE.md  (+29 more)
editor/: README.md
editor-support/: README.md
examples/: EDUCATION_QUIZ_SUITE_STATUS.md  action_demo.ai  advanced_providers.n3  ai-customer-support-console-minimal.ai  ai_components_demo.ai  ai_demo.n3  api_navigation_demo.ai  app.n3  chat_widget_complete.ai  chrome_demo.ai  comment_system_demo.ai  control_flow_demo.n3  customer_support_chatbot.ai  data-display-dashboard.ai  data_binding_integration.py  declarative-ui-demo.ai  education-quiz-generator-and-grader-suite.md  education-quiz-suite-BACKUP.ai  education-quiz-suite-SIMPLE.ai  education-quiz-suite.ai  feedback_demo.ai  forms_demo.ai  governed-multi-agent-research-lab.ai  governed-multi-agent-research-lab.md  layout-primitives-demo.ai  llm_tool_prompt_demo.n3  memory_chat_demo.n3  multimodal_rag.n3  ollama_production_example.py  planning_demo.n3  provider_demo.n3  rag-base-working.ai  rag-document-assistant-and-citation-explorer.md  rag-document-assistant-minimal.ai  rag-document-assistant.ai  rag-test-simple.ai  rag_demo.n3  rag_reranking_example.py  realtime_forms_demo.ai  rlhf_dpo_example.py  (+18 more)
examples_backup/: experiment_comparison.n3  rag_demo.n3  rag_qa.n3  structured_prompt_demo.n3  text_classification.n3  training_demo.n3
frontend_live/: index.html
frontend_test/: scripts.js  styles.css
n3_server/: __init__.py  config.py  requirements.txt
namel3ss/: __init__.py  ast.py  cli.py  cli_eval_rag.py  cli_rag.py  config.py  devserver.py  errors.py  features.py  loader.py  logic_validator.py  plugins.py  resolver.py  resolver_symbolic.py
namel3ss-icons/: language-configuration.json  package.json
namel3ss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
namel3ss_sdk/: CHANGELOG.md  README.md  RELEASE.md  __init__.py  client.py  config.py  exceptions.py  pyproject.toml  runtime.py
rfcs/: 0000-template.md  README.md
runtimes/: README.md
runtimes/deploy/: README.md  pyproject.toml
runtimes/deploy/namel3ss_runtime_deploy/: __init__.py  adapter.py
runtimes/frontend/: README.md  pyproject.toml
runtimes/frontend/namel3ss_runtime_frontend/: __init__.py  adapter.py
runtimes/http/: README.md  pyproject.toml
runtimes/http/namel3ss_runtime_http/: __init__.py  adapter.py
scripts/: README.md  demo_unsupported_components.py  push_current_branch.sh  release_0_5_0.sh  run_tests.sh  smoke_test.sh  upload_testpypi.sh  validate_testpypi_install.sh  verify_package_assets.py
templates/: agent_workflow.ai  hybrid_rag.n3
test_build/: app.ai
test_build_output/: scripts.js
test_grammar_integration/: app.n3  complete_app.n3
test_legacy_output/: admin.html  index.html  scripts.js
test_structured_final/: app.n3
tests/: README.md  backend_test_utils.py  conftest.py  run_all_tests.py  runtime_plugins.py  test_advanced_declarative_features.py  test_agent_e2e.py  test_agent_runtime.py  test_agent_typechecking.py  test_ai_semantic_components.py  test_ai_support_console.py  test_async_streaming.py  test_backend_security.py  test_chrome_codegen.py  test_chrome_ir_builder.py  test_chrome_parser.py  test_cli.py  test_cli_validation.py  test_codegen.py  test_components_validation_summary.py  test_connector_drivers.py  test_critical_components.py  test_data_binding_builder.py  test_data_binding_integration.py  test_data_binding_ir.py  test_data_display_layouts.py  test_data_display_production.py  test_data_display_with_datasets.py  (+79 more)
(+1398 files in other folders)
