[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "namel3ss"
version = "0.6.3"
description = "The first language designed for AI - where thought becomes production code"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Namel3ss Developers" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["codegen", "fastapi", "llm", "dashboard", "language"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Minimal core dependencies (code generation only)
    "jinja2>=3.1,<4.0",         # Template engine for code generation
    "packaging>=20.0",          # Version specification parsing
    "click>=8.0.0",             # CLI framework and command parsing
    # Note: All other features moved to optional extras
    # Generated backends list their dependencies in requirements.txt
]

[project.urls]
Homepage = "https://github.com/SsebowaDisan/namel3ss-programming-language"
Repository = "https://github.com/SsebowaDisan/namel3ss-programming-language"
Documentation = "https://github.com/SsebowaDisan/namel3ss-programming-language#readme"
Issues = "https://github.com/SsebowaDisan/namel3ss-programming-language/issues"

[project.optional-dependencies]
# Enhanced CLI features (rich output, debugging, LSP)
cli = [
    "rich>=13.0.0",             # Rich output formatting and tables
    "psutil>=5.9.0",            # System monitoring for debug commands
    "pygls>=1.3,<2.0",          # Language server protocol support
    "PyYAML>=6.0",              # YAML parsing for conformance testing
    "pydantic>=2.7,<3.0",       # Schema validation for CLI operations
]

# HTTP client for local model management
local-deploy = [
    "httpx>=0.24.0",            # HTTP client for local providers
    "pydantic>=2.7,<3.0",       # Schema validation
]

# SQL database support (SQLAlchemy ORM + drivers)
sql = [
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",      # PostgreSQL async driver
    "psycopg[binary]>=3.2,<4.0", # PostgreSQL sync driver
    "aiomysql>=0.2,<0.3",       # MySQL async driver
]

# Individual database drivers
postgres = [
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",
    "psycopg[binary]>=3.2,<4.0",
]
mysql = [
    "sqlalchemy>=2.0,<3.0",
    "aiomysql>=0.2,<0.3",
]

# NoSQL databases
mongo = [
    "motor>=3.0,<4.0",
    "pymongo>=4.0,<5.0",
]

# Caching and message queues
redis = [
    "redis>=5.0,<6.0",
]

# Real-time features (WebSockets + Redis pub/sub)
realtime = [
    "websockets>=12.0,<13.0",
    "redis>=5.0,<6.0",
]
websockets = [
    "websockets>=12.0,<13.0",
]

# AI/LLM provider SDKs
ai = [
    "openai>=1.0,<2.0",
    "anthropic>=0.40,<1.0",
    "tiktoken>=0.7,<1.0",
]
openai = [
    "openai>=1.0,<2.0",
    "tiktoken>=0.7,<1.0",
]
anthropic = [
    "anthropic>=0.40,<1.0",
]

# Local model deployment support
local-models = [
    "httpx>=0.24.0",            # HTTP client for local providers
    "pydantic>=2.7,<3.0",       # Schema validation
    "vllm>=0.4.0,<1.0",         # vLLM inference engine
    "ollama-python>=0.1.0,<1.0", # Ollama Python client
    "docker>=7.0,<8.0",         # Docker management for LocalAI
]
vllm = [
    "httpx>=0.24.0",
    "pydantic>=2.7,<3.0",
    "vllm>=0.4.0,<1.0",
]
ollama = [
    "httpx>=0.24.0",
    "pydantic>=2.7,<3.0",
    "ollama-python>=0.1.0,<1.0",
]
localai = [
    "httpx>=0.24.0",
    "pydantic>=2.7,<3.0",
    "docker>=7.0,<8.0",
]

# Observability and monitoring
otel = [
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
    "opentelemetry-exporter-otlp>=1.25,<2.0",
]

# Development tools
dev = [
    "black>=24.0,<25.0",
    "coverage>=7.6,<8.0",
    "build>=1.2,<2.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
    "ruff>=0.5,<1.0",
    "tomli>=2.0,<3.0",
]

# All optional features (kitchen sink)
all = [
    # Enhanced CLI
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pygls>=1.3,<2.0",
    "PyYAML>=6.0",
    "pydantic>=2.7,<3.0",
    "httpx>=0.24.0",
    # Databases
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",
    "psycopg[binary]>=3.2,<4.0",
    "aiomysql>=0.2,<0.3",
    "motor>=3.0,<4.0",
    "pymongo>=4.0,<5.0",
    # Caching
    "redis>=5.0,<6.0",
    # Real-time
    "websockets>=12.0,<13.0",
    # AI/LLM
    "openai>=1.0,<2.0",
    "anthropic>=0.40,<1.0",
    "tiktoken>=0.7,<1.0",
    # Local models
    "vllm>=0.4.0,<1.0",
    "ollama-python>=0.1.0,<1.0",
    "docker>=7.0,<8.0",
    # Observability
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
    "opentelemetry-exporter-otlp>=1.25,<2.0",
]

[project.scripts]
namel3ss = "namel3ss.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["namel3ss", "namel3ss.*"]

[tool.setuptools.package-data]
"namel3ss.codegen.backend.core" = ["runtime_sections/*.py"]
"namel3ss.codegen.frontend.templates" = ["*.js"]
"namel3ss.project_templates" = [
    "**/*",
    "**/.env*",
    "**/.gitignore",
    "**/Dockerfile*",
    "**/Makefile*",
    "crud_service/files/config/*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=namel3ss_sdk",
    "--cov=namel3ss.adapters",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["namel3ss_sdk", "namel3ss/adapters"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
