[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namel3ss-sdk"
version = "0.1.0"
description = "Python SDK for Namel3ss - incremental adoption and integration layer"
readme = "README.md"
authors = [{ name = "Namel3ss Developers" }]
license = "MIT"
requires-python = ">=3.10"
keywords = ["namel3ss", "ai", "sdk", "integration", "adoption"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
]

dev = [
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.21,<0.22",
    "pytest-cov>=4.1,<5.0",
    "mypy>=1.5,<2.0",
    "ruff>=0.1,<0.2",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/SsebowaDisan/namel3ss-programming-language"
Repository = "https://github.com/SsebowaDisan/namel3ss-programming-language"
Documentation = "https://github.com/SsebowaDisan/namel3ss-programming-language/tree/main/namel3ss_sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["namel3ss_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
